fix: change account button props to use default values, simplify menuItem List by using visible prop

--- a/src/app/core/components/mmsai-account-button/mmsai-account-button.component.scss
+++ b/src/app/core/components/mmsai-account-button/mmsai-account-button.component.scss
@@ -1,6 +1,7 @@
 :host {
   position: relative;
   max-width: 220px;
+  min-width: 140px;
   .account-button {
     min-width: 0;
     width: 100%;
@@ -25,6 +26,7 @@
     }
 
     .account-button-label {
+      flex: 1;
       overflow: hidden;
       text-overflow: ellipsis;
       font-size: 18px;
