--- a/src/app/core/layout/footer/footer.component.scss
+++ b/src/app/core/layout/footer/footer.component.scss
@@ -3,6 +3,4 @@
   background: var(--highlight-bg);
   display: flex;
   padding: 30px 15px;
-  justify-content: center;
-  align-items: center;
 }
